force-app/main/default/objects/Attendee__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The Attendee company name.</description>
    <inlineHelpText>Enter the Attendee company name.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>