force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The attendees email address.</description>
    <inlineHelpText>Enter the attendees email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>