force-app/main/default/objects/Attendee__c/fields/LocationC__c.field-meta.xml
<CustomField>
    <fullName>LocationC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Relationship with the Location object.</description>
    <inlineHelpText>Lookup Relationship with the Location object.</inlineHelpText>
    <label>LocationC</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>