force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The attendees phone number.</description>
    <inlineHelpText>Enter the attendees phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>